--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -21,15 +21,9 @@
     <h2>{{ 'Reset password'|trans }}</h2>
 
         <div class="page page-center">
-        <div class="container-tight py-4">
-            <div class="text-center mb-4">
-                <a href="{{ '/'|link }}" class="navbar-brand">
-                    <img src="{{ guest.system_company.logo_url }}" height="75" alt="{{ company.name }}">
-                </a>
-            </div>
+        <div class="data-container-tight">
             <div class="card card-md">
                 <div class="card-body">
-                    <h2 class="h2 text-center mb-4">{{ 'Reset your password' | trans }}</h2>
                     <p class="text-muted mb-4">{{ 'Update your password' | trans }}</p>
                     <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
                         <input type="hidden" name="CSRFToken" value="{{ CSRFToken }}"/>
@@ -55,7 +49,7 @@
                                    autofocus>
                         </div>
                         <div class="form-footer">
-                            <button class="btn btn-primary w-100" type="submit">
+                            <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">
                                 <svg class="icon">
                                     <use xlink:href="#mail" />
                                 </svg>
