--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -19,53 +19,45 @@
     </h1>
 {% endif %}
     <h2>{{ 'Reset password'|trans }}</h2>
-
-        <div class="page page-center">
-        <div class="data-container-tight">
-            <div class="card card-md">
-                <div class="card-body">
-                    <p class="text-muted mb-4">{{ 'Update your password' | trans }}</p>
-                    <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
-                        <input type="hidden" name="CSRFToken" value="{{ CSRFToken }}"/>
-                        <input type="hidden" name="hash" value="{{ data.hash }}"/>
-                        <div class="mb-3">
-                            <label class="form-label" for="inputPassword">{{ 'New Password' | trans }}</label>
-                            <input class="form-control"
-                                   id="inputPassword"
-                                   type="password"
-                                   name="password"
-                                   placeholder="{{ 'Enter your new password' | trans }}"
-                                   required
-                                   autofocus>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="inputPassword2">{{ 'Repeat New Password' | trans }}</label>
-                            <input class="form-control"
-                                   id="inputPassword2"
-                                   type="password"
-                                   name="password_confirm"
-                                   placeholder="{{ 'Repeat your new password' | trans }}"
-                                   required
-                                   autofocus>
-                        </div>
-                        <div class="form-footer">
-                            <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">
-                                <svg class="icon">
-                                    <use xlink:href="#mail" />
-                                </svg>
-                                {{ 'Update password' | trans }}
-                            </button>
-                        </div>
-                    </form>
+    <div class="data-container">
+        <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
+            <input type="hidden" name="CSRFToken" value="23629fffcd5875d6ac65dae45797e043">
+            <fieldset>
+                <div class="mb-3">
+                    <label class="form-label" for="inputPassword">{{ 'New Password' | trans }}</label>
+                    <input class="form-control"
+                           id="inputPassword"
+                           type="password"
+                           name="password"
+                           placeholder="{{ 'Enter your new password' | trans }}"
+                           required
+                           autofocus>
                 </div>
-            </div>
-            <ul class="login-footer">
-                <li><a href="{{ 'signup'|link }}"><small>{{ 'Sign Up'|trans }}</small></a></li>
-                <li><a href="{{ 'login'|link }}"><small>{{ 'Login'|trans }}</small></a></li>
-            </ul>
-        </div>
+                <div class="mb-3">
+                    <label class="form-label" for="inputPassword2">{{ 'Repeat New Password' | trans }}</label>
+                    <input class="form-control"
+                           id="inputPassword2"
+                           type="password"
+                           name="password_confirm"
+                           placeholder="{{ 'Repeat your new password' | trans }}"
+                           required
+                           autofocus>
+                </div>
+                <div class="form-footer">
+                    <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">
+                        <svg class="icon">
+                            <use xlink:href="#mail" />
+                        </svg>
+                        {{ 'Update password' | trans }}
+                    </button>
+                </div>
+            </fieldset>
+        </form>
     </div>
-
+    <ul class="login-footer">
+        <li><a href="{{ 'signup'|link }}"><small>{{ 'Sign Up'|trans }}</small></a></li>
+        <li><a href="{{ 'login'|link }}"><small>{{ 'Login'|trans }}</small></a></li>
+    </ul>
 
 </section>
 {% endblock %}
