--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -1,8 +1,8 @@
 {% extends "layout_public.html.twig" %}
 
-{% block meta_title %}{{ 'Set a new password'|trans }}{% endblock %}
+{% block meta_title %}{{ 'Set new Password'|trans }}{% endblock %}
 
-{% block body_class %}page-set-new-password{% endblock %}
+{% block body_class %}page-set-password{% endblock %}
 {% block body %}
 
 <section class="container login" role="main">
@@ -15,67 +15,65 @@
             <img src="{{ guest.system_company.logo_url }}" alt="{{ guest.system_company.name }}"/>
         </a>
         {% endif %}
-
     </h1>
 {% endif %}
-    <h2>{{ 'Reset password'|trans }}</h2>
-    <div class="data-container">
-        <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
-            <input type="hidden" name="CSRFToken" value="23629fffcd5875d6ac65dae45797e043">
-            <fieldset>
-                <div class="mb-3">
-                    <label class="form-label" for="inputPassword">{{ 'New Password' | trans }}</label>
-                    <input class="form-control"
-                           id="inputPassword"
-                           type="password"
-                           name="password"
-                           placeholder="{{ 'Enter your new password' | trans }}"
-                           required
-                           autofocus>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="inputPassword2">{{ 'Repeat New Password' | trans }}</label>
-                    <input class="form-control"
-                           id="inputPassword2"
-                           type="password"
-                           name="password_confirm"
-                           placeholder="{{ 'Repeat your new password' | trans }}"
-                           required
-                           autofocus>
-                </div>
-                <div class="form-footer">
-                    <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">
-                        <svg class="icon">
-                            <use xlink:href="#mail" />
-                        </svg>
-                        {{ 'Update password' | trans }}
-                    </button>
-                </div>
-            </fieldset>
-        </form>
-    </div>
-    <ul class="login-footer">
-        <li><a href="{{ 'signup'|link }}"><small>{{ 'Sign Up'|trans }}</small></a></li>
-        <li><a href="{{ 'login'|link }}"><small>{{ 'Login'|trans }}</small></a></li>
-    </ul>
+    <h2>{{ 'Login'|trans }}</h2>
 
+    <div class="data-block">
+        <div class="data-container">
+        <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
+                <input type="hidden" name="CSRFToken" value="{{ CSRFToken }}"/>
+                <input type="hidden" name="hash" value="{{ data.hash }}"/>
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="password">{{ 'Password'|trans }}</label>
+                        <div class="controls">
+                            <input id="password" type="password" placeholder="{{ 'Password'|trans }}" name="password" required="required" value>
+                            <div class="help-block"></div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label" for="password2">{{ 'Password'|trans }}</label>
+                        <div class="controls">
+                            <input id="password2" type="password" placeholder="{{ 'Password' | trans }}" name="password_confirm" required="required" value>
+                            <div class="help-block"></div>
+                        </div>
+                    </div>
+                    <div class="form-actions">
+                        <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">{{ 'Set new Password'|trans }}</button>
+                    </div>
+                </fieldset>
+            </form>
+
+        </div>
+    </div>
+
+    {% if settings.show_password_reset_link or settings.show_signup_link %}
+    <ul class="login-footer">
+        {% if settings.show_signup_link%}
+        <li><a href="{{ 'signup'|link }}"><small>{{ 'Sign Up'|trans }}</small></a></li>
+        {% endif %}
+    </ul>
+    {% endif %}
 </section>
-{% endblock %}
+{% endblock%}
 
 {% block js %}
 <script type="text/javascript">
 $(function() {
-    $('#password-reset').on('submit', function(event) {
-        bb.post(
-            'guest/client/reset_password',
+    $('#client-login').on('submit', function(event) {
+        bb.post('guest/client/login',
             $(this).serialize(),
             function(result) {
-                bb.msg("{{ 'A password reset confirmation email will be sent to you if we found an account with that email address.'|trans }}");
+                bb.redirect();
             }
         );
 
         return false;
     });
+    {% if request.al %}
+        $('#client-login').submit();
+    {% endif %}
 });
 </script>
 {% endblock %}
