--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -26,21 +26,21 @@
                 <input type="hidden" name="hash" value="{{ data.hash }}"/>
                 <fieldset>
                     <div class="control-group">
-                        <label class="control-label" for="password">{{ 'Password'|trans }}</label>
+                        <label class="control-label" for="password">{{ 'New password'|trans }}</label>
                         <div class="controls">
-                            <input id="password" type="password" placeholder="{{ 'Password'|trans }}" name="password" required="required" value>
+                            <input id="password" type="password" placeholder="{{ 'New password'|trans }}" name="password" required="required" value>
                             <div class="help-block"></div>
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" for="password2">{{ 'Password'|trans }}</label>
+                        <label class="control-label" for="password2">{{ 'Repeat new password'|trans }}</label>
                         <div class="controls">
-                            <input id="password2" type="password" placeholder="{{ 'Password' | trans }}" name="password_confirm" required="required" value>
+                            <input id="password2" type="password" placeholder="{{ 'Repeat new password' | trans }}" name="password_confirm" required="required" value>
                             <div class="help-block"></div>
                         </div>
                     </div>
                     <div class="form-actions">
-                        <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">{{ 'Set new Password'|trans }}</button>
+                        <button class="btn btn-block btn-large btn-inverse btn-alt" type="submit">{{ 'Set new password'|trans }}</button>
                     </div>
                 </fieldset>
             </form>
