--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -23,7 +23,7 @@
         <div class="data-container">
         <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
                 <input type="hidden" name="CSRFToken" value="{{ CSRFToken }}"/>
-                <input type="hidden" name="hash" value="{{ data.hash }}"/>
+                <input type="hidden" name="hash" value="{{ hash }}"/>
                 <fieldset>
                     <div class="control-group">
                         <label class="control-label" for="password">{{ 'New password'|trans }}</label>
