--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -17,13 +17,13 @@
         {% endif %}
     </h1>
 {% endif %}
-    <h2>{{ 'Login'|trans }}</h2>
+    <h2>{{ 'Set new password'|trans }}</h2>
 
     <div class="data-block">
         <div class="data-container">
         <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
                 <input type="hidden" name="CSRFToken" value="{{ CSRFToken }}"/>
-                <input type="hidden" name="hash" value="{{ hash }}"/>
+                <input type="hidden" id="hash" name="hash" value="{{ hash }}"/>
                 <fieldset>
                     <div class="control-group">
                         <label class="control-label" for="password">{{ 'New password'|trans }}</label>
@@ -60,20 +60,10 @@
 
 {% block js %}
 <script type="text/javascript">
-$(function() {
-    $('#client-login').on('submit', function(event) {
-        bb.post('guest/client/login',
-            $(this).serialize(),
-            function(result) {
-                bb.redirect();
-            }
-        );
-
-        return false;
+    // Set value of hash field to last part of URL
+    $(document).ready(function() {
+        var hash = window.location.href.split('/').pop();
+        $('#hash').val(hash);
     });
-    {% if request.al %}
-        $('#client-login').submit();
-    {% endif %}
-});
-</script>
+
 {% endblock %}
