--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -21,7 +21,7 @@
 
     <div class="data-block">
         <div class="data-container">
-        <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ 'index'|alink }}">
+        <form class="api-form" action="{{ 'api/guest/client/update_password'|link }}" method="post" data-api-redirect="{{ '/login'|alink }}">
                 <input type="hidden" name="CSRFToken" value="{{ CSRFToken }}"/>
                 <input type="hidden" id="hash" name="hash" value="{{ hash }}"/>
                 <fieldset>
