--- a/src/modules/Client/html_email/mod_client_password_reset_request.html.twig
+++ b/src/modules/Client/html_email/mod_client_password_reset_request.html.twig
@@ -43,9 +43,9 @@
     <p>To reset your password, please visit the link below:</p>
     <a href="{{'client/reset-password-confirm'|link}}/{{ hash }}" target="_blank">Reset password.</a>
 
-    <p>Once visiting the link above, you will be emailed a new password that you may login with.</p>
+    <p>Once visiting the link above, you will be able to set a new Password.</p>
 
-    <p>You may <a href="{{'login'|link({'email' : c.email }) }}" target="_blank">login</a> or <a href="{{'client/profile'|link}}" target="_blank">edit your profile.</a>
+    <p>You may then <a href="{{'login'|link({'email' : c.email }) }}" target="_blank">login</a> or <a href="{{'client/profile'|link}}" target="_blank">edit your profile.</a>
 
 	<p class="signature">{{ guest.system_company.signature }}</p>
 </body>
