--- a/src/modules/Client/html_client/mod_client_set_new_password.html.twig
+++ b/src/modules/Client/html_client/mod_client_set_new_password.html.twig
@@ -54,6 +54,8 @@
         <li><a href="{{ 'signup'|link }}"><small>{{ 'Sign Up'|trans }}</small></a></li>
         {% endif %}
     </ul>
+    
+    <li><a href="{{ 'login'|link }}"><small>{{ 'Login'|trans }}</small></a></li>
     {% endif %}
 </section>
 {% endblock%}
