--- a/src/themes/admin_default/html/partial_pricing.html.twig
+++ b/src/themes/admin_default/html/partial_pricing.html.twig
@@ -66,7 +66,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][1W][enabled]" value="0">
-                <input class="form-check-input" type="checkbox" name="pricing[recurrent][1W][enabled]" value="1"{% if product.pricing.recurrent['1W'].enabled %} checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="pricing[recurrent][1W][enabled]" value="1">
             </td>
         </tr>
         <tr>
@@ -82,7 +82,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][1M][enabled]" value="0">
-                <input class="form-check-input" type="checkbox" name="pricing[recurrent][1M][enabled]" value="1"{% if product.pricing.recurrent['1M'].enabled %} checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="pricing[recurrent][1M][enabled]" value="1">
             </td>
         </tr>
         <tr>
@@ -100,7 +100,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][3M][enabled]" value="0">
-                <input class="form-check-input" type="checkbox" name="pricing[recurrent][3M][enabled]" value="1"{% if product.pricing.recurrent['3M'].enabled %} checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="pricing[recurrent][3M][enabled]" value="1">
             </td>
         </tr>
         <tr>
@@ -118,7 +118,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][6M][enabled]" value="0">
-                <input class="form-check-input" type="checkbox" name="pricing[recurrent][6M][enabled]" value="1"{% if product.pricing.recurrent['6M'].enabled %} checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="pricing[recurrent][6M][enabled]" value="1">
             </td>
         </tr>
         <tr>
@@ -134,7 +134,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][1Y][enabled]" value="0">
-                <input class="form-check-input" type="checkbox" name="pricing[recurrent][1Y][enabled]" value="1"{% if product.pricing.recurrent['1Y'].enabled %} checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="pricing[recurrent][1Y][enabled]" value="1">
             </td>
         </tr>
         <tr>
@@ -152,7 +152,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][2Y][enabled]" value="0">
-                <input class="form-check-input" type="checkbox" name="pricing[recurrent][2Y][enabled]" value="1"{% if product.pricing.recurrent['2Y'].enabled %} checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="pricing[recurrent][2Y][enabled]" value="1">
             </td>
         </tr>
         <tr>
@@ -170,7 +170,7 @@
             </td>
             <td>
                 <input type="hidden" name="pricing[recurrent][3Y][enabled]" value="0">
-                <input class="form-check-input"type="checkbox" name="pricing[recurrent][3Y][enabled]" value="1"{% if product.pricing.recurrent['3Y'].enabled %} checked{% endif %}>
+                <input class="form-check-input"type="checkbox" name="pricing[recurrent][3Y][enabled]" value="1">
             </td>
         </tr>
     </tbody>
@@ -192,6 +192,21 @@
             $('table.pp tbody').hide();
             $('table.pp tbody.' + $(this).val()).show();
         });
+
+        // Check if the value is not 0
+        if ($(this).val() != 0 && $(this).val() != '') {
+            // Find the closest tr element, then find the checkbox within it and set it to checked
+            $(this).closest('tr').find('.form-check-input').prop('checked', true);
+        } else {
+            // If both setup_price and bill_price are 0 or empty, uncheck the checkbox
+            let $row = $(this).closest('tr');
+            let setupPrice = $row.find('.setup_price').val();
+            let billPrice = $row.find('.bill_price').val();
+
+            if ((setupPrice == 0 || setupPrice == '') && (billPrice == 0 || billPrice == '')) {
+                $row.find('.form-check-input').prop('checked', false);
+            }
+        }
     });
 
     function countTotal(p, s) {
