--- a/src/themes/admin_default/html/partial_pricing.html.twig
+++ b/src/themes/admin_default/html/partial_pricing.html.twig
@@ -187,11 +187,12 @@
 
             elem.val(total);
             // Check or uncheck the checkbox based on the setup_price or bill_price
-            if (s !== 0.00 || p !== 0.00) {
+            if (s > 0 || p > 0) {  // explicitly check if values are greater than zero
                 row.find('input.form-check-input[type="checkbox"]').prop('checked', true);
             } else {
                 row.find('input.form-check-input[type="checkbox"]').prop('checked', false);
             }
+
         }).trigger('keyup');
 
         $('.pp_type input').on('click', function() {
