--- a/src/modules/Invoice/html_client/mod_invoice_print.html.twig
+++ b/src/modules/Invoice/html_client/mod_invoice_print.html.twig
@@ -136,6 +136,16 @@
                                     <dd>{{seller.email}}</dd>
                                     {% endif %}
 
+                                    {% if seller.bank_name %}
+                                    <dt>{{ 'Bank Name'|trans }}:</dt>
+                                    <dd>{{seller.bank_name}}</dd>
+                                    {% endif %}
+
+                                    {% if seller.clearing_code %}
+                                    <dt>{{ 'Clearing Code'|trans }}:</dt>
+                                    <dd>{{seller.clearing_code}}</dd>
+                                    {% endif %}
+
                                     {% if seller.account_number %}
                                     <dt>{{ 'Account'|trans }}:</dt>
                                     <dd>{{seller.account_number}}</dd>
