--- a/src/modules/System/html_admin/mod_system_settings.html.twig
+++ b/src/modules/System/html_admin/mod_system_settings.html.twig
@@ -128,11 +128,11 @@
                                 <label class="col-md-3 col-form-label">{{ 'Display Bank Account information on Documents?'|trans }}</label>
                                 <div class="col-md-6">
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="display_bank_info" id="display_bank_info_yes" value="1" {% if params.display_bank_info == "1" %}checked{% endif %}>
+                                        <input class="form-check-input" type="radio" name="company_display_bank_info" id="display_bank_info_yes" value="1" {% if params.company_display_bank_info == "1" %}checked{% endif %}>
                                         <label class="form-check-label" for="display_bank_info_yes">{{ 'Yes'|trans }}</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="display_bank_info" id="display_bank_info_no" value="0" {% if params.display_bank_info == "0" %}checked{% endif %}>
+                                        <input class="form-check-input" type="radio" name="company_display_bank_info" id="display_bank_info_no" value="0" {% if params.company_display_bank_info == "0" %}checked{% endif %}>
                                         <label class="form-check-label" for="display_bank_info_no">{{ 'No'|trans }}</label>
                                     </div>
                                 </div>
