--- a/src/themes/huraga/html/layout_default.html.twig
+++ b/src/themes/huraga/html/layout_default.html.twig
@@ -294,7 +294,7 @@
 {% if settings.footer_enabled %}
 <footer id="footer" class="container">
     <p>&copy; {{ now|format_date(pattern='yyyy') }} {{ settings.footer_signature | default(company.signature) }}</p>
-    {% if company.display_bank_info %}
+    {% if company.display_bank_info == 1 %}
             <p>Bank Information: Account Number: {{ company.account_number }}, Bank Name: {{ company.bank_name }}, Bank Clearing No: {{ company.bank_clearing_code }}</p>
     {% endif %}
     <ul>
