--- a/src/themes/huraga/html/layout_default.html.twig
+++ b/src/themes/huraga/html/layout_default.html.twig
@@ -292,67 +292,69 @@
 </div>
 
 {% if settings.footer_enabled %}
-<footer id="footer" class="container text-center" >
-    <p>&copy; {{ now|format_date(pattern='yyyy') }} {{ settings.footer_signature | default(company.signature) }}</p>
+<footer id="footer" class="container" >
+    <p class="text-center">&copy; {{ now|format_date(pattern='yyyy') }} {{ settings.footer_signature | default(company.signature) }}</p>
     {% if company.display_bank_info == 1 %}
     <br >
-            <p>Payment Information: Bank Name: {{ company.bank_name }} | Bank Clearing No: {{ company.bank_clearing_code }} | Account Number: {{ company.account_number }}</p>
+            <p class="text-center">Payment Information: Bank Name: {{ company.bank_name }} | Bank Clearing No: {{ company.bank_clearing_code }} | Account Number: {{ company.account_number }}</p>
     <br >
     {% endif %}
-    <ul>
-        {% if settings.footer_link_1_enabled %}
-        <li>
-            {% if 'http://' in settings.footer_link_1_page or  'https://' in settings.footer_link_1_page%}
-            <a href="{{ settings.footer_link_1_page }}">{{ settings.footer_link_1_title }}</a>
-            {% else %}
-            <a href="{{ settings.footer_link_1_page | link }}">{{ settings.footer_link_1_title }}</a>
+    <div class="text-center">
+        <ul>
+            {% if settings.footer_link_1_enabled %}
+            <li>
+                {% if 'http://' in settings.footer_link_1_page or  'https://' in settings.footer_link_1_page%}
+                <a href="{{ settings.footer_link_1_page }}">{{ settings.footer_link_1_title }}</a>
+                {% else %}
+                <a href="{{ settings.footer_link_1_page | link }}">{{ settings.footer_link_1_title }}</a>
+                {% endif %}
+            </li>
             {% endif %}
-        </li>
-        {% endif %}
-        {% if settings.footer_link_2_enabled %}
-        <li>
-            {% if 'http://' in settings.footer_link_2_page or  'https://' in settings.footer_link_2_page%}
-            <a href="{{ settings.footer_link_2_page }}">{{ settings.footer_link_2_title }}</a>
-            {% else %}
-            <a href="{{ settings.footer_link_2_page | link}}">{{ settings.footer_link_2_title }}</a>
+            {% if settings.footer_link_2_enabled %}
+            <li>
+                {% if 'http://' in settings.footer_link_2_page or  'https://' in settings.footer_link_2_page%}
+                <a href="{{ settings.footer_link_2_page }}">{{ settings.footer_link_2_title }}</a>
+                {% else %}
+                <a href="{{ settings.footer_link_2_page | link}}">{{ settings.footer_link_2_title }}</a>
+                {% endif %}
+            </li>
             {% endif %}
-        </li>
-        {% endif %}
-        {% if settings.footer_link_3_enabled %}
-        <li>
-            {% if 'http://' in settings.footer_link_3_page or  'https://' in settings.footer_link_3_page%}
-            <a href="{{ settings.footer_link_3_page }}">{{ settings.footer_link_3_title }}</a>
-            {% else %}
-            <a href="{{ settings.footer_link_3_page | link }}">{{ settings.footer_link_3_title }}</a>
+            {% if settings.footer_link_3_enabled %}
+            <li>
+                {% if 'http://' in settings.footer_link_3_page or  'https://' in settings.footer_link_3_page%}
+                <a href="{{ settings.footer_link_3_page }}">{{ settings.footer_link_3_title }}</a>
+                {% else %}
+                <a href="{{ settings.footer_link_3_page | link }}">{{ settings.footer_link_3_title }}</a>
 
-            {%endif %}
-        </li>
-        {% endif %}
-        {% if settings.footer_link_4_enabled %}
-        <li>
-            {% if 'http://' in settings.footer_link_4_page or  'https://' in settings.footer_link_4_page%}
-            <a href="{{ settings.footer_link_4_page }}">{{ settings.footer_link_4_title }}</a>
-            {% else %}
-            <a href="{{ settings.footer_link_4_page | link }}">{{ settings.footer_link_4_title }}</a>
+                {%endif %}
+            </li>
             {% endif %}
-        </li>
-        {% endif %}
-        {% if settings.footer_link_5_enabled %}
-        <li>
-            {% if 'http://' in settings.footer_link_5_page or  'https://' in settings.footer_link_5_page%}
-            <a href="{{ settings.footer_link_5_page }}">{{ settings.footer_link_5_title }}</a>
-            {% else %}
-            <a href="{{ settings.footer_link_5_page | link }}">{{ settings.footer_link_5_title }}</a>
+            {% if settings.footer_link_4_enabled %}
+            <li>
+                {% if 'http://' in settings.footer_link_4_page or  'https://' in settings.footer_link_4_page%}
+                <a href="{{ settings.footer_link_4_page }}">{{ settings.footer_link_4_title }}</a>
+                {% else %}
+                <a href="{{ settings.footer_link_4_page | link }}">{{ settings.footer_link_4_title }}</a>
+                {% endif %}
+            </li>
             {% endif %}
-        </li>
-        {% endif %}
+            {% if settings.footer_link_5_enabled %}
+            <li>
+                {% if 'http://' in settings.footer_link_5_page or  'https://' in settings.footer_link_5_page%}
+                <a href="{{ settings.footer_link_5_page }}">{{ settings.footer_link_5_title }}</a>
+                {% else %}
+                <a href="{{ settings.footer_link_5_page | link }}">{{ settings.footer_link_5_title }}</a>
+                {% endif %}
+            </li>
+            {% endif %}
 
-        {% if guest.extension_is_on({"mod":'branding'}) %}
-        <li>
-            <a href="https://fossbilling.org" title="Billing Software" target="_blank">{{ 'Powered by the FOSSBilling Community'|trans }}</a>
-        </li>
-        {% endif %}
-    </ul>
+            {% if guest.extension_is_on({"mod":'branding'}) %}
+            <li>
+                <a href="https://fossbilling.org" title="Billing Software" target="_blank">{{ 'Powered by the FOSSBilling Community'|trans }}</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
     {% if settings.footer_to_top_enabled %}
     <a href="#top" class="btn btn-primary btn-flat pull-right"><span class="awe-arrow-up"></span> {{ 'Top'|trans }}</a>
     {% endif %}
