--- a/src/themes/huraga/html/layout_default.html.twig
+++ b/src/themes/huraga/html/layout_default.html.twig
@@ -293,12 +293,13 @@
 
 {% if settings.footer_enabled %}
 <footer id="footer" class="container" >
-    <p class="text-center">&copy; {{ now|format_date(pattern='yyyy') }} {{ settings.footer_signature | default(company.signature) }}</p>
+    <p>&copy; {{ now|format_date(pattern='yyyy') }} {{ settings.footer_signature | default(company.signature) }}
     {% if company.display_bank_info == 1 %}
     <br >
-            <p class="text-center">Payment Information: Bank Name: {{ company.bank_name }} | Bank Clearing No: {{ company.bank_clearing_code }} | Account Number: {{ company.account_number }}</p>
+            <b>Payment Information</b> - Bank Name: {{ company.bank_name }} | Bank Clearing No: {{ company.bank_clearing_code }} | Account Number: {{ company.account_number }}
     <br >
     {% endif %}
+    </p>
     <div class="text-center">
         <ul>
             {% if settings.footer_link_1_enabled %}
