Corrected Bank Name & Clearing No. display

--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -80,7 +80,7 @@
 				</tr>
 			</table>
 		</div>
-		<div class='Footer'>
+		<div class='InvoiceFooter'>
 			<p>Thank you for your business!</p>
 			<p>Payment details:</p>
 			<p>Bank: {{ seller.bank_name }} | Clearing code: {{ seller.bank_clearing_code }} | Account number: {{ seller.account_number }}</p>
