Corrected Bank Name & Clearing No. display

--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -83,7 +83,7 @@
 		<div class='InvoiceFooter'>
 			<p>Thank you for your business!</p>
 			<p>Payment details:</p>
-			<p>Bank: {{ seller.bank_name }} | Clearing code: {{ seller.bank_clearing_code }} | Account number: {{ seller.account_number }}</p>
+			<p>Bank: {{ bank_info.bank_name }} | Clearing code: {{ bank_info.bank_clearing_code }} | Account number: {{ bank_info.account_number }}</p>
 	</div>
 	</body>
 </html>
