Corrected Bank Name & Clearing No. display

--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -82,8 +82,8 @@
 		</div>
 		<div class='InvoiceFooter'>
 			<p>Thank you for your business!</p>
-			<p>Payment details:</p>
-			<p>Bank: {{ bank_info.bank_name }} | Clearing code: {{ bank_info.bank_clearing_code }} | Account number: {{ bank_info.account_number }}</p>
+			<p><b>Payment details:</b><br >
+			Bank: {{ bank_info.bank_name }} | Clearing code: {{ bank_info.bank_clearing_code }} | Account number: {{ bank_info.account_number }}</p>
 	</div>
 	</body>
 </html>
