--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -43,19 +43,19 @@
 		<div class='Breakdown' style='top: {{top}}px'>
 			<table style='width:100%'>
 				<tr>
-					<th>#</th>
-					<th>Product</th>
-					<th>Quantity & Price</th>
-					<th>Total</th>
+					<th style='text-align: left'>#</th>
+					<th style='text-align: left'>Product</th>
+					<th style='text-align: right'>Quantity & Price</th>
+					<th style='text-align: right'>Total</th>
 				</tr>
 				{% set nr = 0 %}
 				{% for item in invoice.lines %}
 					{% set nr = nr + 1 %}
 					<tr>
-						<th>{{ nr }}</th>
-						<th>{{ item.title }}</th>
-						<th>{{ item.quantity }}x {{ item.price|money_convert }}</th>
-						<th>{{ item.total|money_convert }}</th>
+						<td style='text-align: left'>{{ nr }}</td>
+						<td style='text-align: left'>{{ item.title }}</td>
+						<td style='text-align: right'>{{ item.quantity }}x {{ item.price|money_convert }}</td>
+						<td style='text-align: right'>{{ item.total|money_convert }}</td>
 					</tr>
 				{% endfor %}
 				<tr>
