--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -43,19 +43,19 @@
 		<div class='Breakdown' style='top: {{top}}px'>
 			<table style='width:100%'>
 				<tr>
-					<th class='left'>#</th>
-					<th class='left'>Product</th>
-					<th class='right'>Quantity & Price</th>
-					<th class='right'>Total</th>
+					<th style='text-align: left'>#</th>
+					<th style='text-align: left'>Product</th>
+					<th style='text-align: right'>Quantity & Price</th>
+					<th style='text-align: right'>Total</th>
 				</tr>
 				{% set nr = 0 %}
 				{% for item in invoice.lines %}
 					{% set nr = nr + 1 %}
 					<tr>
-						<td class='left'>{{ nr }}</td>
-						<td class='left'>{{ item.title }}</td>
-						<td class='right'>{{ item.quantity }}x {{ item.price|money_convert }}</td>
-						<td class='right'>{{ item.total|money_convert }}</td>
+						<td style='text-align: left'>{{ nr }}</td>
+						<td style='text-align: left'>{{ item.title }}</td>
+						<td style='text-align: right'>{{ item.quantity }}x {{ item.price|money_convert }}</td>
+						<td style='text-align: right'>{{ item.total|money_convert }}</td>
 					</tr>
 				{% endfor %}
 				<tr>
@@ -63,20 +63,20 @@
 				</tr>
 				{% if invoice.tax > 0 %}
 					<tr>
-						<th class='right' colspan='3'>{{ invoice.taxname }}
+						<th style='text-align: right' colspan='3'>{{ invoice.taxname }}
 							{{ invoice.taxrate }}% Tax:</th>
-						<th>{{ invoice.tax|money_convert }}</th>
+						<th style='text-align: right'>{{ invoice.tax|money_convert }}</th>
 					</tr>
 				{% endif %}
 				{% if invoice.discount|default and invoice.discount > 0 %}
 					<tr>
-						<th class='right' colspan='3'>Discount:</th>
-						<th>{{ invoice.discount|money_convert }}</th>
+						<th style='text-align: right' colspan='3'>Discount:</th>
+						<th style='text-align: right'>{{ invoice.discount|money_convert }}</th>
 					</tr>
 				{% endif %}
 				<tr>
-					<th class='right'  colspan='3'>Total:</th>
-					<th class='right'>{{ invoice.total|money_convert }}</th>
+					<th style='text-align: right'  colspan='3'>Total:</th>
+					<th style='text-align: right'>{{ invoice.total|money_convert }}</th>
 				</tr>
 			</table>
 		</div>
