--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -27,8 +27,8 @@
 		<h3 class='CompanyInfo'>Company</h3>
 		<div class='CompanyInfo'>
 		{% for key, value in seller %}
-			<p>{% if key == 'Address 1' %}{{ "Address"|trans }}:<br>{% elseif key == 'Address 2' %}{% elseif key == 'Address 3' %}{% else %}{{ key }}:{% endif %}
-				{{ value }}</p>
+			{% if key == 'Address 1' %}{{ "Address"|trans }}:<br>{% elseif key == 'Address 2' %}{% elseif key == 'Address 3' %}{% else %}{{ key }}:{% endif %}
+				{{ value }}<br>
 		{% endfor %}
 		</div>
 
