--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -28,6 +28,7 @@
 		<div class='CompanyInfo'>
 		<p>
 		{% for key, value in seller %}
+		{% if key == 'Phone'%} {{ "Tel"|trans}} :{% endif %}
 				{{ value }}<br>
 		{% endfor %}
 		</p>
@@ -37,9 +38,10 @@
 		<div class='ClientInfo'>
 		<p>
 		{% for key, value in buyer %}
+		{% if key == 'Phone'%} {{ "Tel"|trans}} :{% endif %}
 				{{ value }}</p>
 		{% endfor %}
-		</p>
+		</p
 		</div>
 
 		<div class='Breakdown' style='top: {{top}}px'>
