Corrected Bank Name & Clearing No. display

--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -39,9 +39,9 @@
 		<p>
 		{% for key, value in buyer %}
 		{% if key == 'Phone'%} {{ "Tel"|trans}} :{% endif %}
-				{{ value }}</p>
+				{{ value }}<br>
 		{% endfor %}
-		</p
+		</p>
 		</div>
 
 		<div class='Breakdown' style='top: {{top}}px'>
