--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -38,8 +38,10 @@
 		<div class='ClientInfo'>
 		<p>
 		{% for key, value in buyer %}
+		{% if key == 'Name'%}<b>{% endif %}
 		{% if key == 'Phone'%} {{ "Tel"|trans}} :{% endif %}
 				{{ value }}<br>
+		{% if key == 'Name'%}</b>{% endif %}
 		{% endfor %}
 		</p>
 		</div>
