--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -28,8 +28,10 @@
 		<div class='CompanyInfo'>
 		<p>
 		{% for key, value in seller %}
+		{% if key == 'Name'%}<b>{% endif %}
 		{% if key == 'Phone'%} {{ "Tel"|trans}} :{% endif %}
 				{{ value }}<br>
+		{% if key == 'Name'%}</b>{% endif %}
 		{% endfor %}
 		</p>
 		</div>
@@ -38,10 +40,10 @@
 		<div class='ClientInfo'>
 		<p>
 		{% for key, value in buyer %}
-		{% if key == 'Name'%}<b>{% endif %}
+		{% if key == 'Company'%}<b>{% endif %}
 		{% if key == 'Phone'%} {{ "Tel"|trans}} :{% endif %}
 				{{ value }}<br>
-		{% if key == 'Name'%}</b>{% endif %}
+		{% if key == 'Company'%}</b>{% endif %}
 		{% endfor %}
 		</p>
 		</div>
