Corrected Bank Name & Clearing No. display

--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -95,7 +95,7 @@
 				<b>Payment details:</b><br >
 				{{"Account Owner"|trans}}: {{ footer.company_name }} | {{"Bank"|trans}}: {{ footer.bank_name }} | {{"Clearing code"|trans}} {{ footer.bank_clearing_code }} <br> {{"Account number"|trans}}: {{ footer.account_number }}<br>
 			{% endif %}
-		<b>{{ 'VAT ID'|trans }}:</b> {{ footer.company_vat }} | {{ 'Company Reg. No'|trans }}: {{ footer.company_number }}<br >
+		<b>{{ 'VAT ID'|trans }}:</b> {{ footer.company_vat }} | <b>{{ 'Company Reg. No'|trans }}:</b> {{ footer.company_number }}<br >
 		{{ footer.www }}
 		</div>
 	</body>
