--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -93,10 +93,9 @@
 		<b>{{ footer.company_name }}</b> {{ footer.address_1 }}, {{ footer.address_2 }}, {{ footer.address_3 }} | <b>{{ 'Email'|trans }}:</b> {{ footer.email }} | <b>{{ 'Phone'|trans }}:</b> {{ footer.phone }}<br>
 			{% if footer.display_bank_info == 1 %}
 				<b>Payment details:</b><br >
-				{{"Account Owner"|trans}}: {{ footer.company_name }} | {{"Bank"|trans}}: {{ footer.bank_name }} | {{"Clearing code"|trans}} {{ footer.bank_clearing_code }} <br> {{"Account number"|trans}}: {{ footer.account_number }}<br>
+				<b>{{"Account Owner"|trans}}:</b> {{ footer.company_name }} | <b>{{"Bank"|trans}}:</b> {{ footer.bank_name }} | <b>{{"Clearing code"|trans}}</b> {{ footer.bank_clearing_code }} | <b>{{"Account number"|trans}}:</b> {{ footer.account_number }}<br>
 			{% endif %}
-		<b>{{ 'VAT ID'|trans }}:</b> {{ footer.company_vat }} | <b>{{ 'Company Reg. No'|trans }}:</b> {{ footer.company_number }}<br >
-		{{ footer.www }}
+		<b>{{ 'VAT ID'|trans }}:</b> {{ footer.company_vat }} | <b>{{ 'Company Reg. No'|trans }}:</b> {{ footer.company_number }} | <b>{{ 'Web'|trans }}:</b>{{ footer.www }}
 		</div>
 	</body>
 </html>
