Corrected Bank Name & Clearing No. display

--- a/src/modules/Invoice/pdf_template/default-pdf.twig
+++ b/src/modules/Invoice/pdf_template/default-pdf.twig
@@ -21,7 +21,7 @@
 			<p>Invoice number: {{ invoice.serie_nr }}</p>
 			<p>Invoice date: {{ invoice.created_at|format_date }}</p>
 			<p>Due date: {{ invoice.due_at|format_date }}</p>
-			<p>Invoice status: {{ invoice.status|capitalize }}</p>
+			<p>Invoice status: {{ invoice.status|capitalize }}</p><br>
 		</div>
 
 		<h3 class='CompanyInfo'>Company</h3>
