--- a/src/modules/Invoice/html_admin/mod_invoice_settings.html.twig
+++ b/src/modules/Invoice/html_admin/mod_invoice_settings.html.twig
@@ -96,7 +96,7 @@
                             <label class="form-check-label" for="radioLetter">{{ 'Letter'|trans }}</label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" id="radioA4" type="radio" name="invoice_document_format" value="A4"{% if params.invoice_document_format == "a4" %} checked{% endif %}>
+                            <input class="form-check-input" id="radioA4" type="radio" name="invoice_document_format" value="A4"{% if params.invoice_document_format == "A4" %} checked{% endif %}>
                             <label class="form-check-label" for="radioA4">{{ 'A4'|trans }}</label>
                         </div>
                     </div>
